[tool.poetry]
name = "hill_climbing_study"
version = "0.1.0"
description = ""
authors = ["hirokinko <hiro.kinko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-bandit = "^0.5.2"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-print = "^3.1.4"
isort = {extras = ["pyproject"], version = "^4.3.21"}
black = "^19.10b0"
mypy = "^0.770"
pre-commit = "^2.4.0"

[tool.black]
target_version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
default_section = "THIRDPARTY"
known_first_party = ["hill_climbing_study", "tests"]
skip = [".git",".pytest_cache",".venv","lib","node_modules"]
not_skip = ["__init__.py"]
